--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@
 /project/target/
 /target/
 /target/scala-2.13/classes/
+/.idea/.gitignore
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/modules/ikuy_utils.iml
+/.idea/modules/ikuy_utils-build.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/codeStyles/Project.xml
+/.bsp/sbt.json
+/.idea/sbt.xml
+/.idea/libraries/sbt__com_chuusai_shapeless_2_13_2_3_3_jar.xml
+/.idea/libraries/sbt__com_lihaoyi_sourcecode_2_13_0_1_7_jar.xml
+/.idea/libraries/sbt__org_scala_lang_scala_library_2_13_4_jar.xml
+/.idea/libraries/sbt__org_scalameta_fastparse_2_13_1_0_1_jar.xml
+/.idea/libraries/sbt__org_scalameta_fastparse_utils_2_13_1_0_1_jar.xml
+/.idea/libraries/sbt__tech_sparse_toml_scala_2_13_0_2_2_jar.xml
+/.idea/scala_compiler.xml
+/.idea/vcs.xml
